Fix vertical alignment of big play button

--- a/src/less/partials/_start-overlay.less
+++ b/src/less/partials/_start-overlay.less
@@ -28,8 +28,12 @@
 
         span {
           width: 80px;
-          height: 40px;
+          height: 80px;
           display: inline-block;
+
+          svg {
+            vertical-align: initial;
+          }
         }
       }
     }
